package com.sda.patterns.behavioral.observer.ex1;

public interface Observer {
	void update();

	void setSubject(Subject sub);
}
