package com.sda.patterns.behavioral.state.ex1;

public interface State {

	void doAction(Context context);
}
